Fix images path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script>
       const uri = window.location.pathname;
-      const canonicaURL = `https://dominio.com${uri}`;
+      const canonicaURL = `https://crypto-tools-react.vercel.app/${uri}`;
       const canonicalLink = document.createElement('link');
       canonicalLink.rel = 'canonical';
       canonicalLink.href = canonicaURL;
